# opentdd-ai-contest

./: Cargo.toml  README.md
ai-downloader/: Cargo.toml
ai-downloader/src/: main.rs
bananas-api/: Cargo.toml  README.md  swagger.json
bananas-api/.openapi-generator/: FILES
bananas-api/docs/: Author.md  Compatibility.md  ConfigApi.md  ConfigBranchesGet200ResponseInner.md  ConfigLicensesGet200ResponseInner.md  ConfigUserAudiencesGet200ResponseInner.md  ContentType.md  Dependency.md  DiscoverApi.md  Global.md  NewApi.md  NewPackagePost201Response.md  NewPackageUploadTokenPutRequest.md  Package.md  PackageAllOfReplacedBy.md  UpdateApi.md  UploadStatus.md  UploadStatusAllOfFiles.md  UserApi.md  UserGet200Response.md  Version.md  VersionMinimized.md  VersionMinimizedAllOfLicense.md
bananas-api/src/apis/: config_api.rs  configuration.rs  discover_api.rs  mod.rs  new_api.rs  update_api.rs  user_api.rs
bananas-api/src/models/: _config_branches_get_200_response_inner.rs  _config_licenses_get_200_response_inner.rs  _config_user_audiences_get_200_response_inner.rs  _new_package__upload_token__put_request.rs  _new_package_post_201_response.rs  _user_get_200_response.rs  author.rs  compatibility.rs  content_type.rs  dependency.rs  error.rs  global.rs  mod.rs  package.rs  package_all_of_replaced_by.rs  upload_status.rs  upload_status_all_of_files.rs  version.rs  version_minimized.rs  version_minimized_all_of_license.rs
openttd-runner/: Cargo.toml  config_dev.yml
openttd-runner-lib/: Cargo.toml
openttd-runner-lib/src/: command_sender.rs  dao.rs  help_parser.rs  lib.rs  (+2 more)
(+3 files in other folders)
